RESOLVED FIXED94041
[WebGL] conformance/textures/texture-size.html is failing on Apple Mountain Lion
https://bugs.webkit.org/show_bug.cgi?id=94041
Summary [WebGL] conformance/textures/texture-size.html is failing on Apple Mountain Lion
Dean Jackson
Reported 2012-08-14 16:18:01 PDT
WebGL conformance test suite build: 5a7a067ead6 Tue Aug 7 14:34:42 2012 -0700 WebKit: r125123 on Mountain Lion 12A269 GPU: AMD Radeon HD 6750M 1024 MB (yes, fairly old)
Attachments
Patch (2.17 KB, patch)
2012-10-19 18:40 PDT, Roger Fong
no flags
Patch (1.91 KB, patch)
2012-10-22 17:40 PDT, Roger Fong
dino: review+
Radar WebKit Bug Importer
Comment 1 2012-08-14 16:18:12 PDT
Roger Fong
Comment 2 2012-10-19 18:40:31 PDT
Roger Fong
Comment 3 2012-10-19 18:47:23 PDT
I'm still a little sketchy on what part of GL is being angry at the texture still being bound. I feel like it shouldn't be a problem as long as the context is still alive and I javascript certainly isn't destroying the context.
Roger Fong
Comment 4 2012-10-22 17:40:48 PDT
Roger Fong
Comment 5 2012-10-22 17:49:51 PDT
(In reply to comment #4) > Created an attachment (id=170037) [details] > Patch this one's better
Roger Fong
Comment 6 2012-10-23 14:49:41 PDT
Note You need to log in before you can comment on or make changes to this bug.